--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
       </section>
 
       <!-- footer -->
-      <!-- <footer class="mt-20">
+      <footer class="mt-20">
         <div
           class="container1 bg-[#2a3034] rounded-[20px] p-[40px_54px] max-[333px]:p-[20px] "
         >
@@ -907,7 +907,7 @@
             </div>
           </div>
         </div>
-      </footer> -->
+      </footer>
     </main>
   </body>
   <script src="./main.js"></script>
